--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.16.0"
+    "react-router-dom": "6.16.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
@@ -44,7 +45,7 @@
     "faker": "5.5.3",
     "jsdom": "22.1.0",
     "typescript": "5.2.2",
-    "vite": "^4.4.11",
+    "vite": "4.4.11",
     "vitest": "0.34.6"
   },
   "browserslist": {
